add available rooms

--- a/index.html
+++ b/index.html
@@ -93,9 +93,92 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, explicabo?</p>
       </div>
         <div class="rooms">
-          
+          <div class="rooms_details">
+            <div class="rooms_content">
+              <h2>Single Rooms</h2>
+              <img src="./assets/singlerooms1.jpg">
+              <p>Cozy and budget friendly rooms suitable for individuals @ <b> Kshs.3500 per month</b>.</p>
+          </div>
+          <div class="rooms_content">
+            <h2>Single Rooms</h2>
+            <img src="./assets/singlerooms.jpg">
+            <p>Cozy and budget friendly rooms suitable for individuals @ <b> Kshs.3500 per month</b>.</p>
+           </div>
+          </div>
+          <div class="rooms_details">
+            <div class="rooms_content">
+              <h2>Bedsitters</h2>
+              <img src="./assets/bedsitters.jpg">
+              <p> cozy and comfortable bedsitters with a kitchen area and sink suitable for individuals and couples <b>@ Kshs.5500 per month</b>.</p>
+          </div>
+          <div class="rooms_content">
+            <h2>Bedsitters</h2>
+            <img src="./assets/bessitters1.jpg">
+            <p> cozy and comfortable bedsitters with a kitchen area and sink suitable for individuals and couples <b>@ Kshs.5500 per month</b>.
+            </p>
+           </div>
+          </div>
+          <div class="rooms_details">
+            <div class="rooms_content">
+              <h2>Studio Apartments</h2>
+              <img src="./assets/studios.jpg">
+              <p> Stylish and functional apartments featuring an open layout with a combined living, sleeping, and dining area, perfect for individuals or couples seeking a modern living experience <b>@ Kshs.7000 per month.</b></p>
+          </div>
+          <div class="rooms_content">
+            <h2>Studio Apartments</h2>
+            <img src="./assets/studios1.jpg">
+            <p> Stylish and functional apartments featuring an open layout with a combined living, sleeping, and dining area, perfect for individuals or couples seeking a modern living experience<b> @ Kshs.7000 per month.</b></p>
+           </div>
+          </div>
+          <div class="rooms_details">
+            <div class="rooms_content">
+              <h2>1 Bedroom Apartments</h2>
+              <img src="./assets/1bed.jpg">
+              <p>Spacious apartments with a separate bedroom, ideal for individuals or couples looking for additional privacy and space<b> @ Kshs.8500 per month</b>.</p>
+          </div>
+          <div class="rooms_content">
+            <h2>1 Bedrooms Apartments</h2>
+            <img src="./assets/1bed1.jpg">
+            <p> Spacious apartments with a separate bedroom, ideal for individuals or couples looking for additional privacy and space <b> @ Kshs.8500 per month</b></p>
+           </div>
+          </div>
+          <div class="rooms_details">
+            <div class="rooms_content">
+              <h2>2 Bedroom Apartments</h2>
+              <img src="./assets/2bed.jpg">
+              <p>Larger apartments with two separate bedrooms, suitable for small families or roommates <b>@ Kshs.10000 per month</b>.</p>
+          </div>
+          <div class="rooms_content">
+            <h2>2 Bedroom Apartments</h2>
+            <img src="./assets/2bed1.jpg">
+            <p>Larger apartments with two separate bedrooms, suitable for small families or roommates <b>@ Kshs.10000 per month</b>.<p>
+           </div>
+          </div>
+          <div class="rooms_details">
+            <div class="rooms_content">
+              <h2>1 Bedroom Self-Contained</h2>
+              <img src="./assets/1bedself.jpg">
+              <p>Apartments with a separate bedroom and private amenities, including a kitchen and bathroom, offering utmost privacy and convenience <b>@ Kshs. 15000 per month.</b></p>
+          </div>
+          <div class="rooms_content">
+            <h2>1 Bedroom Self-Contained</h2>
+            <img src="./assets/1bedself1.jpg">
+            <p>Apartments with a separate bedroom and private amenities, including a kitchen and bathroom, offering utmost privacy and convenience <b> @ Kshs. 15000 per month.</b></p>
+           </div>
+          </div>
+          <div class="rooms_details">
+            <div class="rooms_content">
+              <h2>2 Bedroom Self-Contained</h2>
+              <img src="./assets/2bedself.jpg">
+              <p>Apartments with two bedrooms and private amenities, providing ample space and comfort for families or larger households <b>@ Kshs.20000 per month.</b><p>
+          </div>
+          <div class="rooms_content">
+            <h2>2 Bedroom Self-Contained</h2>
+            <img src="./assets/2bedself1.jpg">
+            <p>Apartments with two bedrooms and private amenities, providing ample space and comfort for families or larger households <b>@ Kshs.20000 per month.</b></p>
+           </div>
+          </div>
         </div>
     </section>
-    
   </body>
 </html>
