--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Urban haven Apartments</title>
   </head>
@@ -244,7 +245,7 @@
           <span> About the company</span>Discover exceptional rental properties tailored to your needs. Our user-friendly platform connects you with a diverse range of high-quality apartments and houses in prime locations. Enjoy transparent pricing, detailed property descriptions, and high-resolution photos to make informed decisions. 
         </p>
         <div class="icons">
-          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-facebook" ></i></a>
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="#"><i class="fa fa-linkedin"></i></a>
           <a href="#"><i class="fa fa-google-plus"></i></a>
@@ -262,7 +263,7 @@
         </div>
         <div>
           <i class="fa fa-envelope"></i>
-          <p><a href="#">  urhaven@apartments.com</a></p>
+          <p><a href="#">urhaven@apartments.com</a></p>
         </div>
       </div>
       <div class="footer-right col-md-4 col-sm-6">
